# Voice-Emotion-Recognition

./: .gitignore  Audio.py  README.md  Sound_stats.ipynb  dictophone.py  dictophone_gui.py  main.py  model.pkl  pyproject.toml  requirements.txt  twoEmotions.pkl
DataLoading/: DataLoader.py
GUI/: Action.py  Dictophone.py  GUI.py
NeuralNetworks/: CNN.py  MLPC.py
Preprocessing/: ButterworthFilter.py  LibVAD.py  Trimmer.py  VoiceActivityDetection.py
audio_analyzer/: __main__.py  main.py  model.pkl
audio_analyzer/GUI/: action.py  dictaphone.py
audio_analyzer/data_loading/: data_loader.py
audio_analyzer/gui/: action.py  dictaphone.py  gui.py
audio_analyzer/neural_networks/: MLPC.py  __init__.py
audio_analyzer/preprocessing/: butterworth_filter.py  lib_vad.py  trimmer.py  voice_activity_detection.py
