[tool.poetry]
name = "audio-analyzer"
version = "0.1.0"
description = "Program for recording audio and analyzing voice"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
