[tool.poetry]
name = "audio-analyzer"
version = "0.1.0"
description = "Program for recording audio and analyzing voice"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
librosa = "^0.8.0"
numpy = "^1.20.1"
PyAudio = "^0.2.11"
matplotlib = "^3.3.4"
webrtcvad = "^2.0.10"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
autoflake = "^1.4"
isort = "^5.7.0"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
audio = "audio_analyzer.__main__:run"